 - Added HPDF_LoadPngImageFromMem() and HPDF_LoadJpegImageFromMem(). 
   (patch by Adam Blokus)
 - Added HPDF_GetContents().
 - Added HPDF_Page_SetZoom().

 - Applied a bunch of fixes and improvements from bug report #13.
 - Fixed build failure when zlib was not found. (Werner Smekal)
 - Fixed build with newer libtool versions.
 - Fixed external build. (thanks to Jeremiah Willcock)

 - Fixed bug #11 (sqrtf() is missing on Winblows).
 - Fixed bug #10 (missing HPDF_LoadPngImageFromMem from win32/msvc/libhpdf.def).
 - Fixed bug #7 (HPDF_String_SetValue() is declared twice).
 - Fixed bug #6 (possible NULL dereference in HPDF_LoadPngImageFromFile2()).
 - Fixed bug #5 (possible NULL derefernce in HPDF_LoadRawImageFromFile()).
 - Fixed bug #4 (possible NULL dereference in HPDF_AToI()).
 - Fixed bug #2 (Ruby binding: hpdf_insert_page has stray printf).

Version 2.1.0 (2008.05.27)
 - Added initial support for Alpha channel in RGB and palette-based PNG images.
 - Added HPDF_GetTTFontDefFromFile() function. This closes [FR #1604475] (HPDF_FONT_EXISTS not error) 
 - Added FreeBasic bindings. (Klaus Siebke)
 - Added Python bindings. (Li Jun)
 - Added U3D support. (Michail Vidiassov)

 - Changed the build system to use autotools.

 - Fixed bug #1682456 (NULL dereference in LoadType1FontFromStream()). 
 - Fixed bug #1628096 (NULL pointer may be dereferenced).

Version 2.0.8 (2006.11.25)
 - Fixed a problem of HPDF_Circle() which causes buffer overflow. 
 - Added HPDF_Ellipse().

Version 2.0.7 (2006.11.05)
 - Fixed a bug of HPDF_Annotation_New() (the values of bottom and top are set 
  upside down).
 - Added HPDF_Page_GetCurrentPos2(), HPDF_Page_GetCurrentTextPos2() and
  HPDF_Image_GetSize2().

Version 2.0.6 (2006.10.16)
 - Added opacity and blend-mode featurs.
 - Added slide-show functions (contributed by Adrian Nelson). 
 - Added an interface for VB6 (contributed by Ko, Chi-Chih).
 - Fixed a bug that HPDF_MemStream_Rewrite() may cause segmentation fault.