@@ -1,8 +1,8 @@
 /* automatically generated by configure */
 /* edit configure.in to change version number */
 #define HPDF_MAJOR_VERSION 2
-#define HPDF_MINOR_VERSION 3
+#define HPDF_MINOR_VERSION 2
 #define HPDF_BUGFIX_VERSION 0
 #define HPDF_EXTRA_VERSION "-dev"
-#define HPDF_VERSION_TEXT "2.3.0-dev"
-#define HPDF_VERSION_ID 20300
+#define HPDF_VERSION_TEXT "2.2.0-dev"
+#define HPDF_VERSION_ID 20200
