@@ -16,6 +16,7 @@ Version 2.2.0 (2009.??.??)
  - Fixed build with newer libtool versions.
  - Fixed external build. (thanks to Jeremiah Willcock)
 
+ - Fixed bug #18 (Missing compiler flag -fexceptions)
  - Fixed bug #11 (sqrtf() is missing on Winblows).
  - Fixed bug #10 (missing HPDF_LoadPngImageFromMem from win32/msvc/libhpdf.def).
  - Fixed bug #7 (HPDF_String_SetValue() is declared twice).
